[package]
name = "krossbar-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.6", features = ["tls-rustls"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
handlebars = { version = "5.1.2", features = ["dir_source"] }
listenfd = "1.0.1"
pretty_env_logger = "0.5.0"
tokio = "1.37.0"
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
