[package]
name = "krossbar-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
axum-extra = "0.10.1"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
handlebars = { version = "6.3.2", features = ["dir_source"] }
listenfd = "1.0.2"
pretty_env_logger = "0.5.0"
tokio = "1.44.2"
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
